--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.562.0",
+    "pinia": "^3.0.4",
     "reka-ui": "^2.7.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.24",
+    "vue-router": "^4.6.4",
     "vue-sonner": "^2.0.9",
     "zod": "^3.25.76"
   },
